src/test/ui/issue-22644.stderr
error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:16:33
   |
16 |     println!("{}", a as usize < b);
   |                               - ^ interpreted as generic argument
   |                               |
   |                               not interpreted as comparison
   |
help: if you want to compare the casted value then write:
   |
16 |     println!("{}", (a as usize) < b);
   |                    ^^^^^^^^^^^^

error: `<` is interpreted as a start of generic arguments for `usize`, not a comparison
  --> $DIR/issue-22644.rs:17:33
   |
17 |     println!("{}", a as usize < 4);
   |                               - ^ interpreted as generic argument
   |                               |
   |                               not interpreted as comparison
   |
help: if you want to compare the casted value then write:
   |
17 |     println!("{}", (a as usize) < 4);
   |                    ^^^^^^^^^^^^

error: aborting due to 2 previous errors

